<resources>
    <string name="app_name">GuitarStudio_Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navi_myZone">我的</string>
    <string name="navi_musicLibrary">乐库</string>
    <string name="navi_tool">工具</string>
    <string name="navi_setting">设定</string>

    <string name="note_minim">2</string>
    <string name="note_crotcheta">4</string>
    <string name="note_quaver">8</string>
    <string name="note_demiquaver">16</string>

    <string name="btn_num1">1</string>
    <string name="btn_num2">2</string>
    <string name="btn_num3">3</string>
    <string name="btn_num4">4</string>
    <string name="btn_num5">5</string>
    <string name="btn_num6">6</string>
    <string name="btn_num7">7</string>
    <string name="btn_num8">8</string>
    <string name="btn_num9">9</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_num0">0</string>
    <string name="btn_OK">OK</string>
    <string name="btn_add_bar">addBar</string>
    <string name="btn_remove_bar">removeBar</string>
    <string name="btn_add_note">addNote</string>
    <string name="btn_remove_note">rmoveNote</string>
    <string name="menu_save">保存</string>
    <string name="menu_edit">编辑</string>

    <string name="dialog_title_save">保存</string>
    <string name="dialog_message_save_or_not">吉他谱已更改，是否保存？</string>
    <string name="dialog_ok">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_message_not_changed">吉他谱未更改！</string>

    <string name="new_guitarnotes">新建吉他谱</string>
    <string name="btnCreateGuitarNotes">新建吉他谱</string>

</resources>
